Add Comments, deprecate old stuff, finish user packets

--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,10 @@
   <artifactId>InformationDisplay</artifactId>
   <version>1.0-DEV</version>
   
+  <properties>
+  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+  
   <build>
     <sourceDirectory>src</sourceDirectory>
     <resources>
