--- a/pom.xml
+++ b/pom.xml
@@ -66,5 +66,11 @@
       <artifactId>netty-all</artifactId>
       <version>5.0.0.Alpha2</version>
     </dependency>
+    
+    <dependency>
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>8.0.16</version>
+    </dependency>
   </dependencies>
 </project>
