--- a/pom.xml
+++ b/pom.xml
@@ -72,5 +72,17 @@
     	<artifactId>mysql-connector-java</artifactId>
     	<version>8.0.16</version>
     </dependency>
+    
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>27.1-jre</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.6</version>
+    </dependency>
   </dependencies>
 </project>
